# devora

./: .gitignore  CLAUDE.md  README.md  bundle-stats.html  bunfig.toml  eslint.config.js  index.html  package.json  prettier.config.js  tsconfig.json  vite.config.ts
.claude/: api.md  claude.md  database.md  features.md  frontend.md  settings.json  settings.local.json
.github/workflows/: ci.yml  e2e.yml  release.yml
e2e/: package-lock.json  package.json  tsconfig.json  wdio.conf.ts
e2e/specs/: project.e2e.ts
scripts/: build-release.ts  bump-version.js  version.ts
server/: config.ts  db.ts  index.ts
server/migrations/: index.ts
server/routes/: actions.ts  data.ts  fileCards.ts  items.ts  projects.ts  settings.ts  update.ts
server/utils/: launchers.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  json_store.rs  lib.rs  main.rs  migration.rs  models.rs  settings.rs
src/api/: tauri.ts
src/components/: AddItemModal.tsx  HostInput.tsx  ItemContextMenu.tsx  NoteEditor.tsx  ProjectDetail.tsx  ProjectList.tsx  RemoteDirBrowser.tsx  Sidebar.tsx
src/constants/: itemTypes.ts
src/hooks/: useCustomIdes.tsx  useEditorHandlers.ts  useFileCards.ts  useProjectState.ts  useProjects.ts  useSettings.tsx  useTheme.tsx  useToast.tsx  useTodos.ts
src/styles/: colors.ts
src/types/: index.ts
src/utils/: remote.ts
tests/: setup.ts  test-utils.tsx
tests/mocks/: database.ts  fetch.ts
tests/server/: db.test.ts  migrations.test.ts
updater/: update.ps1  update.sh
(+53 files in other folders)
